# imgui_impl_d2d

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  conanfile.py
backends/: imgui_impl_d2d.cpp  imgui_impl_d2d.h
docs/: README.md
examples/: CMakeLists.txt
examples/example_win32_direct2d/: CMakeLists.txt  main.cpp
test_package/: CMakeLists.txt  conanfile.py
